[package]
name = "bf-compile"
version = "0.1.1"
authors = ["Nathan Hare <me@laspruca.nz>"]
edition = "2018"
description = "A compiler for BrainFuck"
license = "MIT"
include = ["**/*.rs", "Cargo.toml"]

[[bin]]
name = "bfc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
clap = { version = "4.0.32", features = ["derive"] }
